# q-robot

./: .gitignore  LICENSE  README.md  bashrc  com_locpot.sh  qrobot  qrobot.pub  y  y.pub
actions/: add.py  add_NH3_bri.py  add_NH3_hollow.py  add_NH3_top.py  add_thiol_top.py  add_top.py  bader.sh  bibreader.py  bk.sh  bm.py  bm_fitting.py  bottom.py  cal_hbonds.py  calc_NH.py  calc_NH_bond.py  calc_hbonds.py  cart2dire.py  cas.py  cat_job.sh  center_atoms.py  check.py  check_bad_geos.py  check_converge.sh  check_geo.py  clean.sh  com.sh  con2posall.sh  contcar_save.sh  contcar_to_mol.py  contcar_to_smiles_gu.py  cssm.py  d2_dic.py  dcenter.py  deep_clean.sh  del_job.sh  delete.py  delete_H.py  delete_files.sh  dihedral.py  dire2cart.py  (+93 more)
actions_AB/: add_N_to_surf.py  cleave_111.py  get_111.py  incar.py
actions_Ru45/: 0_get_ga_matrix.py  10_collect_drc_summary.py  11_plot_tof.py  12_plot_drc_onesite.py  14_plot_eads.py  (+20 more)
friends/rsgrad-master/: .gitignore  Cargo.toml  LICENSE  README.md
friends/rsgrad-master/.github/workflows/: release-binaries.yml  rust.yml
friends/rsgrad-master/src/: lib.rs  main.rs  settings.rs  types.rs
friends/rsgrad-master/src/commands/: chgdiff.rs  common.rs  dos.rs  mod.rs  pos.rs  pot.rs  rlx.rs  traj.rs  vib.rs  workfunc.rs
friends/rsgrad-master/src/vasp_parsers/: chg.rs  kpoints.rs  mod.rs  outcar.rs  poscar.rs  potcar.rs  procar.rs
friends/rsgrad-master/tests/: OUTCAR_ispin2  OUTCAR_multiple_ionic_steps  OUTCAR_ncl  OUTCAR_unfinished  OUTCAR_vibrations  POSCAR.O2  PROCAR.ncl  XDATCAR_another_rlx  test_outcar.rs  test_poscar.rs
(+154 files in other folders)
